--- a/bio.html
+++ b/bio.html
@@ -20,9 +20,10 @@
 	  <img src="/images/prof.jpg">
 	</div>
       <a class="active item" href="/index">Home</a>
+      <a class="item" href="/bio">My Bio</a>
       <a class="item" href="/portfolio">Portfolio</a>
-      <a class="item">Job History</a>
-      <a class="item">More About Me</a>
+      <!-- <a class="item">Job History</a>
+      <a class="item">More About Me</a> -->
     </div>
   </div>
 
