--- a/bio.html
+++ b/bio.html
@@ -19,13 +19,22 @@
 	<div class="rounded ui medium image">
 	  <img src="/images/prof.jpg">
 	</div>
-      <a class="active item" href="/index">Home</a>
-      <a class="item" href="/bio">My Bio</a>
+      <a class="item" href="/index">Home</a>
+      <a class="active item" href="/bio">My Bio</a>
       <a class="item" href="/portfolio">Portfolio</a>
       <!-- <a class="item">Job History</a>
       <a class="item">More About Me</a> -->
     </div>
   </div>
+  
+  <!-- Page Contents-->
+  <div class="ui vertical segment">
+  <h1 class="ui header">About Me</h1>
+  </div>
+  
+  
+  
+  <!-- End Page Contents-->
 
 <br>
 	<br>
