--- a/bio.html
+++ b/bio.html
@@ -28,9 +28,7 @@
   </div>
   
   <!-- Page Contents-->
-  <div class="ui vertical segment">
-  <h1 class="ui header">About Me</h1>
-  </div>
+  <h2 class="ui dividing header">About Me</h2>
   
   
   
