--- a/bio.html
+++ b/bio.html
@@ -14,26 +14,27 @@
 </head>
 <body>
 <h1 class="ui header" align="middle"> Emily Rose </h1>
-<div class="peek">
-    <div class="ui vertical pointing secondary menu">
-	<div class="rounded ui medium image">
-	  <img src="/images/prof.jpg">
-	</div>
-      <a class="item" href="/index">Home</a>
-      <a class="active item" href="/bio">My Bio</a>
-      <a class="item" href="/portfolio">Portfolio</a>
-      <!-- <a class="item">Job History</a>
-      <a class="item">More About Me</a> -->
-    </div>
-  </div>
-  
+<div class="main container">
+	<div class="peek">
+	    <div class="ui vertical pointing secondary menu">
+		<div class="rounded ui medium image">
+		  <img src="/images/prof.jpg">
+		</div>
+	      <a class="item" href="/index">Home</a>
+	      <a class="active item" href="/bio">My Bio</a>
+	      <a class="item" href="/portfolio">Portfolio</a>
+	      <!-- <a class="item">Job History</a>
+	      <a class="item">More About Me</a> -->
+	    </div>
+	  </div>
+	  
   <!-- Page Contents-->
   <h2 class="ui dividing header">About Me</h2>
   
   
   
   <!-- End Page Contents-->
-
+</div>
 <br>
 	<br>
 	<br>
