--- a/bio.html
+++ b/bio.html
@@ -29,7 +29,7 @@
 	  </div>
 	  
   <!-- Page Contents-->
-  <h2 class="ui dividing header">About Me</h2>
+  <h2 class="ui blue dividing header">About Me</h2>
   
   
   
