--- a/bio.html
+++ b/bio.html
@@ -29,7 +29,15 @@
 	  </div>
 	  
   <!-- Page Contents-->
-  <h2 class="ui dividing header">About Me</h2>
+  <h2 class="ui dividing header">Types</h2>
+
+  <div class="example">
+    <h4 class="ui header">Header</h4>
+    <p>A standard header</p>
+    <h2 class="ui header">
+      Account Settings
+    </h2>
+  </div>
   
   
   
