--- a/bio.html
+++ b/bio.html
@@ -35,7 +35,12 @@
   <div class="column">
     <div class="ui segment">
     <!-- begin page content -->
-  <h2 class="ui dividing header">Types</h2>
+  <h2 class="ui dividing header">About Me</h2>
+  <h4 class="ui inverted blue header">My Education</h4>
+  <p>I am currently a senior attending Wheaton College in Norton, MA.  I am double majoring in Math/Computer Science and Music, and I have maintained a 3.2 GPA throughout my college career.  I am also the treasurer and captain of the Wheaton College Equestrian Team. </p>
+  
+  <h4 class="ui inverted blue header">My Work History</h4>
+  <p>I have been working as a volunteer at my local equestrian center since age 10, working anywhere from 10 hours per week during the school year to 60 hours per week on school breaks. This work has taught me that any work I do is necessary in order to keep the horses healthy and the business functioning. I have learned to transfer this work ethic into other jobs I have had, such as my current job working in the <a href="http://wheatoncollege.edu/archives/">Wheaton College Archives</a>, where I am often tasked with updating the online database of our collections. </p>
     <!-- end page content -->
     </div>
   </div>
