--- a/bio.html
+++ b/bio.html
@@ -36,7 +36,7 @@
     <div class="ui segment">
     <!-- begin page content -->
   <h2 class="ui dividing header">About Me</h2>
-  <h4 class="ui inverted blue header">My Education</h4>
+  <h4 class="ui rounded inverted blue header">My Education</h4>
   <p>I am currently a senior attending Wheaton College in Norton, MA.  I am double majoring in Math/Computer Science and Music, and I have maintained a 3.2 GPA throughout my college career.  I am also the treasurer and captain of the Wheaton College Equestrian Team. </p>
   
   <h4 class="ui inverted blue header">My Work History</h4>
