--- a/bio.html
+++ b/bio.html
@@ -15,7 +15,7 @@
 <body>
 <h1 class="ui header" align="middle"> Emily Rose </h1>
 <div class="main container">
-<div class="ui two column grid">
+<div class="two column grid">
   <div class="column">
       <div class="peek">
 	    <div class="ui vertical pointing secondary menu">
