--- a/bio.html
+++ b/bio.html
@@ -30,7 +30,7 @@
 	    </div>
 	  </div> 
   </div>
-  <div class="column">
+  <div class="12 wide column">
     <!-- begin page content -->
   <h2 class="ui dividing header">About Me</h2>
   <h4 class="ui inverted blue header">My Education</h4>
