--- a/bio.html
+++ b/bio.html
@@ -15,8 +15,8 @@
 <body>
 <h1 class="ui header" align="middle"> Emily Rose </h1>
 <div class="main container">
-<div class="ui two column grid">
-  <div class="column">
+<div class="ui grid">
+  <div class="4 wide column">
       <div class="peek">
 	    <div class="ui vertical pointing secondary menu">
 		<div class="rounded ui medium image">
