--- a/bio.html
+++ b/bio.html
@@ -16,7 +16,7 @@
 <h1 class="ui header" align="middle"> Emily Rose </h1>
 <div class="main container">
 <div class="ui grid">
-  <div class="4 wide column">
+  <div class="four wide column">
       <div class="peek">
 	    <div class="ui vertical pointing secondary menu">
 		<div class="rounded ui medium image">
@@ -30,7 +30,7 @@
 	    </div>
 	  </div> 
   </div>
-  <div class="12 wide column">
+  <div class="twelve wide column">
     <!-- begin page content -->
   <h2 class="ui dividing header">About Me</h2>
   <h4 class="ui inverted blue header">My Education</h4>
