--- a/bio.html
+++ b/bio.html
@@ -38,6 +38,9 @@
   
   <h4 class="ui inverted blue header">My Work History</h4>
   <p>I have been working as a volunteer at my local equestrian center since age 10, working anywhere from 10 hours per week during the school year to 60 hours per week on school breaks. This work has taught me that any work I do is necessary in order to keep the horses healthy and the business functioning. I have learned to transfer this work ethic into other jobs I have had, such as my current job working in the <a href="http://wheatoncollege.edu/archives/">Wheaton College Archives</a>, where I am often tasked with updating the online database of our collections. </p>
+  
+  <h4 class="ui inverted blue header">Contact Me</h4>
+  <p>Email: rose.emily.sarah@gmail.com</p>
     <!-- end page content -->
   </div>
 	
